infra/k8s/base/sonarqube-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sonarqube
  labels:
    name: sonarqube
    app.kubernetes.io/part-of: sonarqube
