infra/k8s/base/ai-srv.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-srv
  namespace: actium-backend
  labels:
    app: ai-srv
    component: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ai-srv
  template:
    metadata:
      labels:
        app: ai-srv
        component: backend
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"
        prometheus.io/port: "8001"
    spec:
      containers:
        - name: ai-api
          image: tsermakov/actium-ai-srv:v1.0.2
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "512Mi"
          ports:
            - name: http-metrics
              containerPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: ai-srv
  namespace: actium-backend
  labels:
    app: ai-srv
    component: backend
spec:
  selector:
    app: ai-srv
  ports:
    - name: http-metrics
      protocol: TCP
      port: 8001
      targetPort: 8001
