infra/k8s/base/user-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-account-backend
  namespace: actium-backend
  labels:
    app: user-account-backend
    component: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-account-backend
  template:
    metadata:
      labels:
        app: user-account-backend
        component: backend
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"
        prometheus.io/port: "8080"
    spec:
      containers:
        - name: backend
          image: tsermakov/actium-user-account-backend:v1.0.2
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsNonRoot: true
            runAsUser: 1000
            runAsGroup: 1000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
          ports:
            - name: http-metrics
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: user-account-backend
  namespace: actium-backend
  labels:
    app: user-account-backend
    component: backend
spec:
  selector:
    app: user-account-backend
  ports:
    - name: http-metrics
      protocol: TCP
      port: 8080
      targetPort: 8080
