infra/k8s/base/ingress-backend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: actium-backend-ingress
  namespace: actium-backend
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/user(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: user-account-srv
                port:
                  number: 8080
          - path: /api/ai(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: ai-srv
                port:
                  number: 8001
